<resources>
    <string name="app_name">HearMe</string>
    <string name="esqueci">Esqueci minha senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">Entrar</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="horario">Horário</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="cadastro">CADASTRE-SE</string>
    <string name="hist">Histórico de alertas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
